infra/integration/ldap/dirsrv-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dirsrv
  namespace: ldap-lab
spec:
  serviceName: dirsrv-internal
  replicas: 1
  selector:
    matchLabels:
      app: dirsrv
  template:
    metadata:
      labels:
        app: dirsrv
    spec:
      serviceAccountName: dirsrv-sa
      containers:
        - name: dirsrv
          image: quay.io/389ds/dirsrv:c9s
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3389
              name: ldap
            - containerPort: 3636
              name: ldaps
          volumeMounts:
            - name: dirsrv-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: dirsrv-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
