infra/integration/ldap/lam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-account-manager
  namespace: ldap-lab
spec:
  selector:
    app: ldap-account-manager
  ports:
    - name: http
      port: 80
      targetPort: http
